--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.config.import=optional:file:src/main/resources/.env[.properties]
 spring.application.name=boot-store
-spring.datasource.url=jdbc:mysql://localhost:3306/bootstore
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
